<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".UI.AddEntryActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:background="#2196F3"
        android:gravity="center"
        android:shadowColor="#A51414"
        android:text="Add Entry"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#2196F3"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <EditText
            android:id="@+id/inputName"
            android:background="#CCEFFF"
            android:layout_width="281dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="60"
            android:hint="Type Name.."
            android:padding="5dp" />

        <EditText
            android:padding="5dp"
            android:id="@+id/inputNumber"
            android:background="#CCEFFF"
            android:layout_width="297dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="40"
            android:hint="Amount"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="444dp"
        android:layout_weight="100"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:layout_weight="70"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/expRB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="35"
                android:checked="true"
                android:text="Expense" />

            <RadioButton
                android:id="@+id/incRB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="35"
                android:text="Income" />
        </RadioGroup>

        <Button
            android:id="@+id/AddButton"
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:layout_margin="5dp"
            android:layout_weight="15"
            android:background="#6FBEFD"
            android:text="Add"
            android:textColor="#616161"
            android:textSize="25dp" />
    </LinearLayout>

    <Button
        android:id="@+id/addEntryBackBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6FBEFD"
        android:textSize="25dp"
        android:text="List" />

</LinearLayout>