<resources>
    <string name="app_name">budgetingApp</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
...
